--- a/dfds.html
+++ b/dfds.html
@@ -199,10 +199,71 @@
             </form>
         </div>
     </nav>
+    <!-- poster slider start -->
+    <div class="slideshow-container">
+        <div class="mySlides fade">
+            <img src="images/Poster1.jpg" style="width:100%">
+        </div>
+
+        <div class="mySlides fade">
+            <img src="images/Poster2.jpg" style="width:100%">
+        </div>
+
+        <div class="mySlides fade">
+            <img src="images/Poster3.jpg" style="width:100%">
+        </div>
+        <a class="prev" onclick="plusSlides(-1)">❮</a>
+        <a class="next" onclick="plusSlides(1)">❯</a>
+    </div>
+    <br>
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
     <script>
         let subMenu = document.getElementById("subMenu");
         function toggleMenu() {
             subMenu.classList.toggle("open-menu")
+        }
+        let menu = document.getElementById('menu-icon');
+        let crosse = document.getElementById('crose');
+        let slideber = document.getElementById('slideber');
+
+
+        function slide() {
+            console.log('hello');
+            slideber.style.display = 'block';
+        }
+        function crose() {
+            console.log('hello');
+            slideber.style.display = 'none';
+        }
+        let slideIndex = 1;
+        showSlides(slideIndex);
+
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
+
+        function currentSlide(n) {
+            showSlides(slideIndex = n);
+        }
+
+        function showSlides(n) {
+            let i;
+            let slides = document.getElementsByClassName("mySlides");
+            let dots = document.getElementsByClassName("dot");
+            if (n > slides.length) { slideIndex = 1 }
+            if (n < 1) { slideIndex = slides.length }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active";
         }
     </script>
 </body>
