--- a/al.html
+++ b/al.html
@@ -13,41 +13,75 @@
     <section class="Top-categories-of-the-month">
         <div class="Top-categories-of-the-month-heading">
             <h1>Top Categories Of The Month</h1>
+            <div>
+                <span class="catagories-arrow">❮</span>
+                <span class="catagories-arrow">❯</span>
+            </div>
         </div>
         <div class="Top-categories-of-the-month-image-main-box">
             <div class="Top-categories-of-the-month-image-box">
-                <img src="images/motherboard-3-150x150.png" alt="">
-                <p>Fashion</p>
+                <img src="images/amd_ryzen_3_3200g_3rd_gen_processor_4mb_cache_4.00ghz_tray_pack_1_.png" alt="">
+                <p>Processor</p>
                 <p id="Show-Now_popup">SHOP NOW</p>
                 <div class="Show-Now_popup-line"></div>
             </div>
             <div class="Top-categories-of-the-month-image-box">
-                <img src="images/motherboard-3-150x150.png" alt="">
-                <p>Furniture</p>
+                <img src="images/h525.png" alt="">
+                <p>Motherboard</p>
                 <p id="Show-Now_popup">SHOP NOW</p>
                 <div class="Show-Now_popup-line"></div>
             </div>
             <div class="Top-categories-of-the-month-image-box">
-                <img src="images/motherboard-3-150x150.png" alt="">
-                <p>Shoes</p>
+                <img src="images/MAGNET.png" alt="">
+                <p>PC Cabinet</p>
                 <p id="Show-Now_popup">SHOP NOW</p>
                 <div class="Show-Now_popup-line"></div>
             </div>
             <div class="Top-categories-of-the-month-image-box">
-                <img src="images/motherboard-3-150x150.png" alt="">
-                <p>Sports</p>
+                <img src="images/Corsair-Dominator-Platinum-Rgb-32GB-2x16GB-Ddr5-Dram-7000MHz-C34-Desktop-Ram-1.webp" alt="">
+                <p>RAM</p>
                 <p id="Show-Now_popup">SHOP NOW</p>
                 <div class="Show-Now_popup-line"></div>
             </div>
             <div class="Top-categories-of-the-month-image-box">
-                <img src="images/motherboard-3-150x150.png" alt="">
-                <p>Games</p>
+                <img src="images/20201028111930.png" alt="">
+                <p>Graphics card</p>
                 <p id="Show-Now_popup">SHOP NOW</p>
                 <div class="Show-Now_popup-line"></div>
             </div>
             <div class="Top-categories-of-the-month-image-box">
-                <img src="images/motherboard-3-150x150.png" alt="">
-                <p>Computer</p>
+                <img src="images/wd-green-ssd-240gb-left.png.thumb.1280.1280.png" alt="">
+                <p>SSD</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/500.png" alt="">
+                <p>CPU Cooler</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/K599.webp" alt="">
+                <p>Keyboard</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/basilisk-v3_500x500.png" alt="">
+                <p>Mouse</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/mh650-380x380-1-hover.png" alt="">
+                <p>Headset</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/KCAS-Plus-Gold-750W-Infographics-01__77431.webp" alt="">
+                <p>Power Supply</p>
                 <p id="Show-Now_popup">SHOP NOW</p>
                 <div class="Show-Now_popup-line"></div>
             </div>
