--- a/al.html
+++ b/al.html
@@ -14,8 +14,8 @@
         <div class="Top-categories-of-the-month-heading">
             <h1>Top Categories Of The Month</h1>
             <div>
-                <span class="catagories-arrow">❮</span>
-                <span class="catagories-arrow">❯</span>
+                <span class="catagories-arrow prv-catagories-arrow">❮</span>
+                <span class="catagories-arrow next-catagories-arrow">❯</span>
             </div>
         </div>
         <div class="Top-categories-of-the-month-image-main-box">
@@ -87,7 +87,7 @@
             </div>
         </div>
     </section>
-
+    <script src="sk.js"></script>
 </body>
 
 </html>
