--- a/dfds.html
+++ b/dfds.html
@@ -129,7 +129,7 @@
                         <div class="mm-6column">
                             <span class="left-images">
                                 <img src="images/gaming-keyboards.jpg">
-                                <p>Most Popular Styles </p>
+                                <p>Gaming Zone ! lets play</p>
                             </span>
                         </div>
                         <div class="mm-3column">
@@ -221,51 +221,85 @@
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
     </div>
-    <script>
-        let subMenu = document.getElementById("subMenu");
-        function toggleMenu() {
-            subMenu.classList.toggle("open-menu")
-        }
-        let menu = document.getElementById('menu-icon');
-        let crosse = document.getElementById('crose');
-        let slideber = document.getElementById('slideber');
-
-
-        function slide() {
-            console.log('hello');
-            slideber.style.display = 'block';
-        }
-        function crose() {
-            console.log('hello');
-            slideber.style.display = 'none';
-        }
-        let slideIndex = 1;
-        showSlides(slideIndex);
-
-        function plusSlides(n) {
-            showSlides(slideIndex += n);
-        }
-
-        function currentSlide(n) {
-            showSlides(slideIndex = n);
-        }
-
-        function showSlides(n) {
-            let i;
-            let slides = document.getElementsByClassName("mySlides");
-            let dots = document.getElementsByClassName("dot");
-            if (n > slides.length) { slideIndex = 1 }
-            if (n < 1) { slideIndex = slides.length }
-            for (i = 0; i < slides.length; i++) {
-                slides[i].style.display = "none";
-            }
-            for (i = 0; i < dots.length; i++) {
-                dots[i].className = dots[i].className.replace(" active", "");
-            }
-            slides[slideIndex - 1].style.display = "block";
-            dots[slideIndex - 1].className += " active";
-        }
-    </script>
+    <section class="Top-categories-of-the-month">
+        <div class="Top-categories-of-the-month-heading">
+            <h1>Top Categories Of The Month</h1>
+            <div>
+                <span class="catagories-arrow prv-catagories-arrow">❮</span>
+                <span class="catagories-arrow next-catagories-arrow">❯</span>
+            </div>
+        </div>
+        <div class="Top-categories-of-the-month-image-main-box">
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/amd_ryzen_3_3200g_3rd_gen_processor_4mb_cache_4.00ghz_tray_pack_1_.png" alt="">
+                <p>Processor</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/h525.png" alt="">
+                <p>Motherboard</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/MAGNET.png" alt="">
+                <p>PC Cabinet</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/Corsair-Dominator-Platinum-Rgb-32GB-2x16GB-Ddr5-Dram-7000MHz-C34-Desktop-Ram-1.webp"
+                    alt="">
+                <p>RAM</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/20201028111930.png" alt="">
+                <p>Graphics card</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/wd-green-ssd-240gb-left.png.thumb.1280.1280.png" alt="">
+                <p>SSD</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/500.png" alt="">
+                <p>CPU Cooler</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/K599.webp" alt="">
+                <p>Keyboard</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/basilisk-v3_500x500.png" alt="">
+                <p>Mouse</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/mh650-380x380-1-hover.png" alt="">
+                <p>Headset</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+            <div class="Top-categories-of-the-month-image-box">
+                <img src="images/KCAS-Plus-Gold-750W-Infographics-01__77431.webp" alt="">
+                <p>Power Supply</p>
+                <p id="Show-Now_popup">SHOP NOW</p>
+                <div class="Show-Now_popup-line"></div>
+            </div>
+        </div>
+    </section>
+    <script src="sk.js"></script>
 </body>
 
 </html>
