--- a/dfds.html
+++ b/dfds.html
@@ -299,6 +299,209 @@
             </div>
         </div>
     </section>
+    <div class="maincontainer">
+        <div class="maincontainer-image">
+            <img src="images/7.webp">
+        </div>
+        <div class="nav-slider">
+            <div class="navbar">
+                <h1>AMD</h1>
+                <ul>
+                    <li><a href="#" style="color: black;">FEATURE</a></li>
+                    <li><a href="#">AMD RAYZEN3</a></li>
+                    <li><a href="#">AMD RAYZEN5</a></li>
+                    <li><a href="#">AMD RAYZEN7</a></li>
+                    <li><a href="#">AMD RAYZEN9</a></li>
+                </ul>
+            </div>
+            <section class="slider">
+                <button class="pre-btn">&#155;</button>
+                <button class="nxt-btn">&#155;</button>
+                <div class="slider-container">
+                    <div class="slider-product">
+                        <div class="slider-image">
+                            <img src="images/amd-ryzen-7.webp" alt="product" class="slider-img-details">
+                        </div>
+                        <div class="info">
+                            <p class="product-name"><b>AMD Rayzen 3 3200G Processor</b></p>
+                            <p class="brand"><b>AMD</b></p>
+
+                            <p class="stockdetails"><span style="color: #f16a08;">&#10004</span><b>in stock</b>
+                            </p>
+                            <p class="price">&#8371 87400</p>
+                            <p class="actual-price">&#8371 90400</p>
+                            <button class="addToCard"><b>Add to card</b></button>
+                        </div>
+                    </div>
+                    <div class="slider-product">
+                        <div class="slider-image">
+                            <img src="images/amd-ryzen-7.webp" alt="product" class="slider-img-details">
+                        </div>
+                        <div class="info">
+                            <p class="product-name"><b>AMD Rayzen 3 3200G Processor</b></p>
+                            <p class="brand"><b>AMD</b></p>
+
+                            <p class="stockdetails"><span style="color: #f16a08;">&#10004</span><b>in stock</b>
+                            </p>
+                            <p class="price">&#8371 87400</p>
+                            <p class="actual-price">&#8371 90400</p>
+                            <button class="addToCard"><b>Add to card</b></button>
+                        </div>
+                    </div>
+                    <div class="slider-product">
+                        <div class="slider-image">
+                            <img src="images/amd-ryzen-7.webp" alt="product" class="slider-img-details">
+                        </div>
+                        <div class="info">
+                            <p class="product-name"><b>AMD Rayzen 3 3200G Processor</b></p>
+                            <p class="brand"><b>AMD</b></p>
+
+                            <p class="stockdetails"><span style="color: #f16a08;">&#10004</span><b>in stock</b>
+                            </p>
+                            <p class="price">&#8371 87400</p>
+                            <p class="actual-price">&#8371 90400</p>
+                            <button class="addToCard"><b>Add to card</b></button>
+                        </div>
+                    </div>
+                    <div class="slider-product">
+                        <div class="slider-image">
+                            <img src="images/amd-ryzen-7.webp" alt="product" class="slider-img-details">
+                        </div>
+                        <div class="info">
+                            <p class="product-name"><b>AMD Rayzen 3 3200G Processor</b></p>
+                            <p class="brand"><b>AMD</b></p>
+
+                            <p class="stockdetails"><span style="color: #f16a08;">&#10004</span><b>in stock</b>
+                            </p>
+                            <p class="price">&#8371 87400</p>
+                            <p class="actual-price">&#8371 90400</p>
+                            <button class="addToCard"><b>Add to card</b></button>
+                        </div>
+                    </div>
+                    <div class="slider-product">
+                        <div class="slider-image">
+                            <img src="images/amd-ryzen-7.webp" alt="product" class="slider-img-details">
+                        </div>
+                        <div class="info">
+                            <p class="product-name"><b>AMD Rayzen 3 3200G Processor</b></p>
+                            <p class="brand"><b>AMD</b></p>
+
+                            <p class="stockdetails"><span style="color: #f16a08;">&#10004</span><b>in stock</b>
+                            </p>
+                            <p class="price">&#8371 87400</p>
+                            <p class="actual-price">&#8371 90400</p>
+                            <button class="addToCard"><b>Add to card</b></button>
+                        </div>
+                    </div>
+                    <div class="slider-product">
+                        <div class="slider-image">
+                            <img src="images/amd-ryzen-7.webp" alt="product" class="slider-img-details">
+                        </div>
+                        <div class="info">
+                            <p class="product-name"><b>AMD Rayzen 3 3200G Processor</b></p>
+                            <p class="brand"><b>AMD</b></p>
+
+                            <p class="stockdetails"><span style="color: #f16a08;">&#10004</span><b>in stock</b>
+                            </p>
+                            <p class="price">&#8371 87400</p>
+                            <p class="actual-price">&#8371 90400</p>
+                            <button class="addToCard"><b>Add to card</b></button>
+                        </div>
+                    </div>
+                    <div class="slider-product">
+                        <div class="slider-image">
+                            <img src="images/amd-ryzen-7.webp" alt="product" class="slider-img-details">
+                        </div>
+                        <div class="info">
+                            <p class="product-name"><b>AMD Rayzen 3 3200G Processor</b></p>
+                            <p class="brand"><b>AMD</b></p>
+
+                            <p class="stockdetails"><span style="color: #f16a08;">&#10004</span><b>in stock</b>
+                            </p>
+                            <p class="price">&#8371 87400</p>
+                            <p class="actual-price">&#8371 90400</p>
+                            <button class="addToCard"><b>Add to card</b></button>
+                        </div>
+                    </div>
+                    <div class="slider-product">
+                        <div class="slider-image">
+                            <img src="images/amd-ryzen-7.webp" alt="product" class="slider-img-details">
+                        </div>
+                        <div class="info">
+                            <p class="product-name"><b>AMD Rayzen 3 3200G Processor</b></p>
+                            <p class="brand"><b>AMD</b></p>
+
+                            <p class="stockdetails"><span style="color: #f16a08;">&#10004</span><b>in stock</b>
+                            </p>
+                            <p class="price">&#8371 87400</p>
+                            <p class="actual-price">&#8371 90400</p>
+                            <button class="addToCard"><b>Add to card</b></button>
+                        </div>
+                    </div>
+                    <div class="slider-product">
+                        <div class="slider-image">
+                            <img src="images/amd-ryzen-7.webp" alt="product" class="slider-img-details">
+                        </div>
+                        <div class="info">
+                            <p class="product-name"><b>AMD Rayzen 3 3200G Processor</b></p>
+                            <p class="brand"><b>AMD</b></p>
+
+                            <p class="stockdetails"><span style="color: #f16a08;">&#10004</span><b>in stock</b>
+                            </p>
+                            <p class="price">&#8371 87400</p>
+                            <p class="actual-price">&#8371 90400</p>
+                            <button class="addToCard"><b>Add to card</b></button>
+                        </div>
+                    </div>
+                    <div class="slider-product">
+                        <div class="slider-image">
+                            <img src="images/amd-ryzen-7.webp" alt="product" class="slider-img-details">
+                        </div>
+                        <div class="info">
+                            <p class="product-name"><b>AMD Rayzen 3 3200G Processor</b></p>
+                            <p class="brand"><b>AMD</b></p>
+
+                            <p class="stockdetails"><span style="color: #f16a08;">&#10004</span><b>in stock</b>
+                            </p>
+                            <p class="price">&#8371 87400</p>
+                            <p class="actual-price">&#8371 90400</p>
+                            <button class="addToCard"><b>Add to card</b></button>
+                        </div>
+                    </div>
+                    <div class="slider-product">
+                        <div class="slider-image">
+                            <img src="images/amd-ryzen-7.webp" alt="product" class="slider-img-details">
+                        </div>
+                        <div class="info">
+                            <p class="product-name"><b>AMD Rayzen 3 3200G Processor</b></p>
+                            <p class="brand"><b>AMD</b></p>
+
+                            <p class="stockdetails"><span style="color: #f16a08;">&#10004</span><b>in stock</b>
+                            </p>
+                            <p class="price">&#8371 87400</p>
+                            <p class="actual-price">&#8371 90400</p>
+                            <button class="addToCard"><b>Add to card</b></button>
+                        </div>
+                    </div>
+                    <div class="slider-product">
+                        <div class="slider-image">
+                            <img src="images/amd-ryzen-7.webp" alt="product" class="slider-img-details">
+                        </div>
+                        <div class="info">
+                            <p class="product-name"><b>AMD Rayzen 3 3200G Processor</b></p>
+                            <p class="brand"><b>AMD</b></p>
+
+                            <p class="stockdetails"><span style="color: #f16a08;">&#10004</span><b>in stock</b>
+                            </p>
+                            <p class="price">&#8371 87400</p>
+                            <p class="actual-price">&#8371 90400</p>
+                            <button class="addToCard"><b>Add to card</b></button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
     <script src="sk.js"></script>
 </body>
 
